# interactive-sora

./: .env.example  .envrc  .gitignore  .pre-commit-config.yaml  app.py  generate_preset_content.py  pyproject.toml  start.sh  test_vid_download.py
frontend/src/: App.jsx
frontend/src/components/: ConfigScreen.jsx
frontend/src/styles/: config.css
