

[project]
name = "interactive-sora"
version = "0.1.0"
description = "Sora Choose-Your-Own Adventure API"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "requests",
    "opencv-python-headless",
    "imageio-ffmpeg",
    "tqdm",
]
[dependency-groups]
dev = [
    "pre-commit",
    "ruff>=0.7.2",
]
